<resources>
    <string name="app_name">NotesProjectApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">Theme</string>
    <string name="setting">Setting</string>
    <string name="_16">16</string>
    <string name="april">April</string>
    <string name="_2021">2021</string>
    <string name="my_work_list">My Work List</string>
    <string name="working">Working</string>
    <string name="office">Office</string>
    <string name="tasks">tasks</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="all_notes">All Notes</string>
    <string name="pinned">Pinned</string>
    <string name="to_do">To Do</string>
    <string name="welcome_supernote">Welcome Supernote</string>
    <string name="last_modified">Last Modified</string>
    <string name="month">month</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="label">Label</string>
    <string name="dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="text">Text</string>
    <string name="work">Work</string>
    <string name="description">description</string>
    <string name="open_drawer">Открыть</string>
    <string name="close_drawer">Закрыть</string>
    <string name="untitled">Untitled</string>
    <string name="start_writing_a_note_or_choose">Start writing a note or choose</string>
    <string name="weekly_planer">Weekly planer</string>
    <string name="created">Created</string>
    <string name="_12_12_2023">12.12.2023</string>
    <string name="template">Template</string>
    <string name="my_templates">My templates</string>
    <string name="viewwing_all_templates">Viewwing:All Templates</string>
    <string name="start_writing_a_planed">start_writing_a_planed</string>
    <string name="notes">Notes</string>
    <string name="hange">Сhange</string>
    <string name="note">Note</string>
    <string name="next">Next</string>
</resources>