<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".template.AddTemplateFragmentFragment">


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"/>

    <ImageView
        android:id="@+id/img_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_add_notes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        />


    <TextView
        android:id="@+id/tv_last_modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintStart_toStartOf="@id/img_back"
        android:text="@string/last_modified"
        style="@style/Text"
        android:layout_marginTop="70dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_last_modified"
        android:text="@string/_16"
        style="@style/Text"
        android:layout_marginStart="18dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_date"
        android:text="@string/month"
        style="@style/Text"
        android:layout_marginStart="6dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_month"
        android:text="@string/_2021"
        style="@style/Text"
        android:layout_marginStart="6dp"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_years"
        android:text="@string/_9_00_pm"
        style="@style/Text"
        android:layout_marginStart="6dp"
        android:textSize="14sp"/>


    <EditText
        android:id="@+id/et_work"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/tv_last_modified"
        app:layout_constraintStart_toStartOf="@id/tv_last_modified"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        style="@style/Text"
        android:hint="@string/description"
        android:gravity="center"/>


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/et_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_marginTop="60dp"/>


    <EditText
        android:id="@+id/et_text"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>