<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_item_home"
            >

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Text"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/april"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@id/tv_date"
                app:layout_constraintStart_toEndOf="@id/tv_date"
                style="@style/Text"
                android:layout_marginStart="10dp"
                />


            <TextView
                android:id="@+id/tv_years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2021"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@id/tv_date"
                app:layout_constraintStart_toEndOf="@id/tv_month"
                style="@style/Text"
                android:layout_marginStart="6dp"
                />

            <TextView
                android:id="@+id/tv_work_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_work_list"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:layout_constraintStart_toStartOf="@id/tv_date"
                android:layout_marginTop="10dp"
                style="@style/Text"

                />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_working"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:backgroundTint="@color/buttobColors"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_work_list"
                app:layout_constraintStart_toStartOf="@id/tv_work_list"
                app:cornerRadius="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working"
                    style="@style/Text"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="4dp"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_office"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:backgroundTint="@color/buttobColors"
                android:layout_marginStart="6dp"
                app:layout_constraintTop_toTopOf="@id/card_btn_working"
                app:layout_constraintStart_toEndOf="@id/card_btn_working"
                app:cornerRadius="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office"
                    style="@style/Text"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="4dp"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_tasks"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="6dp"
                android:backgroundTint="@color/buttobColors"
                app:layout_constraintTop_toTopOf="@id/card_btn_office"
                app:layout_constraintStart_toEndOf="@id/card_btn_office"
                app:cornerRadius="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks"
                    style="@style/Text"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="4dp"
                    />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_btn_working"
                app:layout_constraintStart_toStartOf="@id/card_btn_working"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_point1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/tv_point1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/card_btn_working"
                    app:layout_constraintStart_toEndOf="@id/img_point1"
                    android:layout_marginTop="8dp"
                    style="@style/Text"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>