<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <ImageView
            android:id="@+id/img_placeholder"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/plaseholder"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            style="@style/Screen"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_planer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/weekly_planer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_placeholder"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"

            />


        <TextView
            android:id="@+id/tv_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/created"
            app:layout_constraintTop_toBottomOf="@id/tv_planer"
            app:layout_constraintStart_toEndOf="@id/img_placeholder"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"

            />


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/_12_12_2023"
            app:layout_constraintTop_toTopOf="@id/tv_created"
            app:layout_constraintStart_toEndOf="@id/tv_created"
            android:layout_marginStart="10dp"

            />






</androidx.constraintlayout.widget.ConstraintLayout>