<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.greetingnote.GreetNoteFragment">


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"/>

    <ImageView
        android:id="@+id/img_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_add_notes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        />


    <TextView
        android:id="@+id/tv_last_modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintStart_toStartOf="@id/img_back"
        android:text="@string/last_modified"
        style="@style/Text"
        android:layout_marginTop="70dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_last_modified"
        android:text="@string/_16"
        style="@style/Text"
        android:layout_marginStart="18dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_date"
        android:text="@string/month"
        style="@style/Text"
        android:layout_marginStart="6dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_month"
        android:text="@string/_2021"
        style="@style/Text"
        android:layout_marginStart="6dp"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_last_modified"
        app:layout_constraintStart_toEndOf="@id/tv_years"
        android:text="@string/_9_00_pm"
        style="@style/Text"
        android:layout_marginStart="6dp"
        android:textSize="14sp"/>


    <EditText
        android:id="@+id/et_work"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_last_modified"
        app:layout_constraintStart_toStartOf="@id/tv_last_modified"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        style="@style/Text"
        android:hint="@string/description"
        android:gravity="center"/>


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/et_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_marginTop="60dp"/>


    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        style="@style/Text"
        android:gravity="center"
        android:hint="Note"
        />

    <LinearLayout
        android:id="@+id/linearkeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_text"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/img_tt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="320dp"
            android:src="@drawable/text_fields"/>

        <ImageView
            android:id="@+id/img_skrepka"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/img_screpka"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Если заметка важна нажмите чек бокс"
        style="@style/Text"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/check_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        />

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/linearkeyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />





</androidx.constraintlayout.widget.ConstraintLayout>