<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screen"
    tools:context=".template.TemplateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_back"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            />

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_notes"
            app:layout_constraintTop_toTopOf="@id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template"
            android:textSize="24sp"
            style="@style/Screen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_back"
            android:layout_marginTop="18dp"
            android:layout_marginStart="120dp"/>


        <TextView
            android:id="@+id/tv_my_templates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_templates"
            android:textSize="18sp"
            style="@style/Screen"
            app:layout_constraintTop_toBottomOf="@id/tv_template"
            app:layout_constraintStart_toEndOf="@id/img_back"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_my_templates"
            app:layout_constraintStart_toStartOf="@id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_item_home">

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_search"/>


            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search"
                style="@style/Text"
                android:background="@android:color/transparent"
                android:layout_marginStart="14dp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_all_templates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            app:layout_constraintStart_toStartOf="@id/linear1"
            android:text="@string/viewwing_all_templates"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            style="@style/Text"/>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="@id/linear1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="280dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_template"/>






    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>