<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.creatnewframent.CreateNewFragment">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"/>


    <TextView
        android:id="@+id/tv_untitled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="@string/untitled"
        android:textColor="@color/buttobColors"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintStart_toStartOf="@id/img_back"
        android:layout_marginTop="30dp"/>



    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_untitled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_marginTop="120dp"/>

    <EditText
        android:id="@+id/et_planer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        style="@style/Text"
        android:gravity="start"
        android:hint="@string/start_writing_a_planed"
        />


    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@id/et_planer"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        style="@style/Text"
        android:gravity="start"
        android:hint="@string/start_writing_a_note_or_choose"

        />

    <ImageView
        android:id="@+id/img_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/template"
        app:layout_constraintStart_toStartOf="@id/et_text"
        app:layout_constraintTop_toBottomOf="@id/et_planer"
        android:layout_marginStart="220dp"
        android:layout_marginTop="26dp"/>


    <LinearLayout
        android:id="@+id/linearkeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_text"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/img_tt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="320dp"
            android:src="@drawable/text_fields"/>

        <ImageView
            android:id="@+id/img_skrepka"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/img_screpka"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>